@@ -1,6 +1,14 @@
 2006-03-14  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/Makefile.am:
+	* flumotion/component/producers/checks.xml:
+	* flumotion/component/producers/firewire/firewire.xml:
+	* flumotion/component/producers/soundcard/soundcard.xml:
+	  Fix bundles for producer checks
+
+2006-03-14  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/Makefile.am:
 	* flumotion/component/producers/checks.py:
 	* flumotion/component/producers/firewire/firewire.py:
 	* flumotion/component/producers/firewire/firewire.xml:
